--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Montserrat&display=swap');
